
                              Kiji Scoring Release Notes

Version 0.2.0
  * SCORE-49. Fixes ConcurrentModificationException in FreshKijiTableReader.rereadPolicies().
  * SCORE-48. Updates pom.xml versions to latest released versions of dependencies.
  * SCORE-47. KijiFreshnessManager and FreshTool now support post-attachment validation of
      freshness policies.
  * SCORE-45. FreshKijiTableReaderBuilder.get() is now FreshKijiTableReaderBuilder.create().
  * SCORE-34. FreshKijiTableReader.reloadPolicies has been renamed rereadPolicies to reflect the
      distinction from preload.
  * SCORE-22. KijiFreshnessManager store policy methods now include a variety of safety checks.
  * SCORE-41. FreshKijiTableReader now includes a preload method, which instantiates all objects
      necessary for freshening a given data request without side effects.
  * SCORE-39. FreshKijiTableReader now includes methods which override configured timeout durations.
  * SCORE-13. FreshKijiTableReaderFactory has been replaced with FreshKijiTableReaderBuilder.
  * SCORE-36. Makes the fresh CLI tool visible to the kiji tool launcher.

Version 0.1.0
